[package]
name = "code_runner"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["code", "language", "runner"]
categories = []

description = "code runner for languages"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-code_runner.git"
homepage = "https://gitlab.com/nathanfaucett/rs-code_runner"

[lib]
name = "code_runner"
path = "src/lib.rs"

[[bin]]
required-features = ["serde_json"]
name = "code_runner"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
tempfile = "3.0"

[features]
default = ["serde_json"]
