[package]
name = "code_runner"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["code", "language", "runner"]
categories = []

description = "code runner for languages"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-code_runner.git"
homepage = "https://gitlab.com/nathanfaucett/rs-code_runner"

[lib]
name = "code_runner"
path = "src/lib.rs"

[[bin]]
name = "code_runner"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"
tokio = "0.1"
tokio-process = "0.2"
